[HERCULES-9713] - I18n observaciones de Requerimiento Justificacion